# quorum

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  dev-install.sh  install.sh
.github/workflows/: ci.yml  release.yml
docs/: 2026-06-23-quorum-design.md  2026-06-23-quorum-implementation-plan.md  2026-06-26-auto-renew-plan.md  2026-06-26-review-as-task-plan.md  2026-06-26-sync-capstone-plan.md  2026-07-01-command-surface-audit.md  parent-repo-integration.md
quorum/: Cargo.toml
quorum-core/: Cargo.toml
quorum-core/src/: activity.rs  agents.rs  branches.rs  claims.rs  clock.rs  control.rs  db.rs  errlog.rs  error.rs  events.rs  feed.rs  journal.rs  lib.rs  mailbox.rs  pinned.rs  schema.sql  stats.rs  sweep.rs  sync.rs  tasks.rs
quorum/src/: cheatsheet.rs  cli.rs  config.rs  input.rs  main.rs  output.rs  paths.rs
quorum/src/serve/: agent.rs  mod.rs  names.rs  stream.rs  worktree.rs
quorum/tests/: cli_claims.rs  cli_control.rs  cli_done.rs  cli_fake_agent.rs  cli_feed.rs  cli_init.rs  cli_input_safety.rs  cli_log.rs  cli_ops.rs  cli_pinned.rs  cli_presence.rs  cli_review.rs  cli_serve.rs  cli_serve_slice.rs  cli_sync.rs  cli_tasks.rs  race.rs  smoke_e2e.rs
