[package]
name = "quorum"
version.workspace = true
edition.workspace = true

[[bin]]
name = "quorum"
path = "src/main.rs"

[dependencies]
quorum-core = { path = "../quorum-core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
directories = "5"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json = "1"
